# statistic-calculator

./: README.md
statistic-calculator/: CMakeLists.txt  graph.cpp  graph.h  graph.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  param.h
statistics-calculator/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  param.h  resources.qrc
statistics-calculator/scripts/: drawGraph.py
